CHANGES
=======

1.4.0 (unreleased)
------------------

- Set umask to avoid world-readable log and cache files.

- Add a space after the PAM prompt.

- The add-google-users script now reads the pam_google config file to get the
  domain, username, password and group.  You can also use -C/--config-file to
  specify a different config file.

- Added Debian packaging.


1.3.0 (2012-04-24)
------------------

- Added ability to cache authentication result, since some uses, such as
  Apache authentication can cause a lot of requests. File- and
  memcached-based caches have been implemented and are available/configurable
  in the configuration file.

- Fully stubbed out the Google API for faster and simpler testing.

- Removed all traces of Cipher's specific account details.

- Changed all headers to ZPL.

- The package is ready for public release.


1.2.0 (2012-04-17)
------------------

- Do not fail if the username already exists.


1.1.0 (2012-04-17)
------------------

- Make the admin group configurable.


1.0.0 (2012-04-17)
------------------

- PAM module authenticating against users in a group of a particular Google
  domain.

- Script to add all users of a group within a Google domain as system users.